--- a/views/album/album-id.ejs
+++ b/views/album/album-id.ejs
@@ -24,7 +24,7 @@
         <table class="table text-white">
             <tbody>
                 <% albumsong.forEach(function(albumsong){ %>
-                      <tr>
+                      <tr class="shadows">
                         <th>
                             <div class="d-flex">
                                 <span class="songorder d-block pt-4"><%= count %></span>
