--- a/views/album/new.ejs
+++ b/views/album/new.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="col pt-4">
-    <div class="container-fluid">
+    <div class="container-fluid addbg py-4">
         <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link" href="/">Songs</a>
