--- a/views/song/remove.ejs
+++ b/views/song/remove.ejs
@@ -29,7 +29,7 @@
           </thead>
           <tbody>
             <% allSong.forEach(function(allSong){ %>
-              <tr class="shadow-bg text-center">
+              <tr class="shadows text-center">
                 <th class="pt-4">
                   <%= count %>
                 </th>
