--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,84 +1,3 @@
-.alert {
-    margin: 0;
-}
-
-@media (max-width: 767px) {
-    .carousel-inner .carousel-item>div {
-        display: none
-    }
-
-    .carousel-inner .carousel-item>div:first-child {
-        display: block
-    }
-}
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-    display: flex
-}
-
-@media (min-width: 768px) {
-
-    .carousel-inner .carousel-item-end.active,
-    .carousel-inner .carousel-item-next {
-        transform: translateX(25%)
-    }
-
-    .carousel-inner .carousel-item-start.active,
-    .carousel-inner .carousel-item-prev {
-        transform: translateX(-25%)
-    }
-}
-
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start {
-    transform: translateX(0)
-}
-
-/* .carousel-inner {
-    padding: 1em;
-  }
-  .card {
-    margin: 0 0.5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-  }
-  .carousel-control-prev,
-  .carousel-control-next {
-    background-color: #e1e1e1;
-    width: 6vh;
-    height: 6vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  @media (min-width: 768px) {
-    .carousel-item {
-      margin-right: 0;
-      flex: 0 0 16.666667%;
-      display: block;
-    }
-    .carousel-inner {
-      display: flex;
-    }
-  }
-  .card .img-wrapper {
-      max-width: 100%;
-      height: 13em;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .card img {
-      max-height: 100%;
-  }
-  @media (max-width: 767px) {
-    .card .img-wrapper {
-      height: 17em;
-    }
-  } */
-
 .navbar {
     background-color: black;
 }
@@ -140,12 +59,6 @@
     width: 30vw;
 }
 
-.username {
-    font-weight: bold;
-    font-size: 1.2rem;
-    text-align: center;
-}
-
 .login--form__logo,
 .register--form__logo {
     text-align: center;
@@ -162,21 +75,24 @@
     left: 100%;
 }
 
-.card:hover {
+.shadows{
+    background-color: transparent;
+    border: none;
+}
+.shadows:hover{
     background-color: transparent;
     background-color: rgba(164, 164, 164, 0.3);
     border: none;
 }
-
-.card {
-    background-color: transparent;
-    border: none;
+.profilebg{
+    background-color: rgba(0, 0, 0, 0.4);
 }
-
+.searchbg,.showmore{
+    background-color: rgba(0, 0, 0, 0.25);
+}
 .card-body {
     padding: 0.5rem;
 }
-
 .songinfo--img,
 .albuminfo--img {
     height: 9rem;
@@ -199,9 +115,9 @@
 
 .songimg {
     height: 4.5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
     object-fit: cover;
+        margin-left: 2rem;
+    margin-right: 2rem;
     aspect-ratio: 1/1;
 }
 
@@ -261,7 +177,7 @@
     color: #B6B6B6;
 }
 
-.song--artist:hover {
+.song--artist:hover, .album--album:hover {
     text-decoration: underline;
     font-size: 1.6vh;
     font-weight: bold;
@@ -318,14 +234,24 @@
     padding: 0.4rem;
     height: 2rem;
 }
-
-.favbtn,
-.addbtn {
-    margin-left: 1rem;
+.fa-star{
+    color: white;
+}
+.addbtn,.favbtn {
+    color: white;
+    display: inline;
     width: 30px;
     height: 30px;
 }
-
+.favbtn-click{
+    color: white;
+    display: inline;
+    width: 30px;
+    height: 30px;
+}
+.hidden{
+    display: none;
+}
 .seeall {
     font-size: 15px;
     color: #A5A5A5;
@@ -442,12 +368,86 @@ tr {
     aspect-ratio: 1/1;
 }
 
-.shadow-bg:hover {
-    background-color: transparent;
-    background-color: rgba(164, 164, 164, 0.3);
-    border: none;
+.profileimg{
+    height: 100%;
+    width: 9rem;
+    border-radius: 50%;
 }
 
+.account-settings .user-profile {
+    margin: 0 0 1rem 0;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+.account-settings .user-profile .user-avatar {
+    margin: 0 0 1rem 0;
+}
+.account-settings .user-profile .user-avatar img {
+    width: 90px;
+    height: 90px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+}
+.account-settings .user-profile h5.user-name {
+    margin: 0 0 0.5rem 0;
+}
+.account-settings .user-profile h6.user-email {
+    margin: 0;
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: #9fa8b9;
+}
+
+.form-control {
+    border: 1px solid #cfd1d8;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    font-size: .825rem;
+    background: #ffffff;
+    color: #2e323c;
+}
+
+.fa-user{
+    color: rgb(255, 255, 255);
+}
+.fa-star{
+    font-size: 30px;
+}
+.fa-star:active{
+    font-size: 30px;
+    color: rgb(255, 0, 0);
+}
+.addbg{
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
+}
+.thinword{
+    color: #A5A5A5;
+}
+.squarebox{
+    height: 660px;
+    background-color: rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    vertical-align: middle;
+}
+.table > :not(:first-child) {
+    border-top: 0;
+}
+.fullrow{
+    width: 100%;
+}
+div.squarebox {
+    height: 660px;
+    position: relative }
+div.squarebox .t {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) }
 @keyframes glow {
     from {
         text-shadow: 0 0 10px rgb(42, 226, 233), 0 0 20px rgb(42, 226, 233), 0 0 30px rgb(42, 226, 233), 0 0 40px rgb(42, 226, 233), 0 0 50px rgb(42, 226, 233);
@@ -456,7 +456,6 @@ tr {
     to {
         text-shadow: 0 0 60px rgb(42, 226, 233), 0 0 70px rgb(42, 226, 233), ;
     }
-
 }
 
 body {
