--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <script src="/style.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/akjpro/form-anticlear/base.js"></script>
-    <!-- <script src="/routes/search.js"></script> -->
+    <script src="https://kit.fontawesome.com/d47180477f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,8 +32,8 @@
                 Life
             </a>
             <% if(!currentUser || currentUser && !currentUser.isAdmin){ %>
-                <form action="/search" id="Formid" method="post" class="form-anticlear">
-                    <input onkeyup="this.form.submit()" class="form-control me-2 search navbar--search__size"
+                <form action="/search" method="post" class="form-anticlear">
+                    <input class="form-control me-2 search navbar--search__size"
                         type="search" name="keyword" placeholder="Artists, Song" required>
                 </form>
                 <% } %>
@@ -51,13 +51,14 @@
                                     <%= currentUser.username %>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end bg-black">
-                                    <li><a class="dropdown-item text-white" href="/user">Your Profile</a></li>
+                                    <li><a class="dropdown-item text-white" href="/user/<%= currentUser._id %>">Your Profile</a></li>
                                     <li><a class="dropdown-item text-white" href="/logout">Log Out</a></li>
                                 </ul>
                             </div>
                             <% } %>
         </div>
     </nav>
+    
     <% if(error && error.length>0){ %>
         <div class='alert alert-danger' role='alert'>
             <%= error %>
