--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/register.ejs") %>
-<form action="/register " method="POST">
+<form action="/register " method="POST" enctype='multipart/form-data'>
     <div class="container">
         <div class="text-white">
             <div class="register--form">
@@ -16,6 +16,22 @@
                 <div class="mb-3">
                     <label class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">First Name</label>
+                    <input type="text" class="form-control" name="firstname" placeholder="Your first name" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Last Name</label>
+                    <input type="text" class="form-control" name="lastname" placeholder="Your last name" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">E-mail</label>
+                    <input type="email" class="form-control" name="email" placeholder="Your e-mail address">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Profile image</label>
+                    <input type="file" class="form-control" name="image" accept="image/*">
                 </div>
                 <!-- <div class="mb-3">
                     <label class="form-label">Admin code</label>
