--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,31 +1,160 @@
 <%- include("partials/header.ejs") %>
-<% let count=1 %>
-<div class="col pt-3">
-    <div class="container-fluid">
-          <h1 class="text-white">Songs</h1>
-          <table class="table text-white">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Album</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% searchsong.forEach(function(searchsong){ %>
-                <tr>
-                  <th scope="row"><%= count %></th>
-                  <% count++ %>
-                  <td>
-                    <img class="songimg" src="<%= searchsong.image %>">
-                    <%= searchsong.name %>
-                  </td>
-                </tr>
-             
+  <% let count = 1 %>
+    <div class="col mb-5">
+      <div class="album mt-2">
+        <div class="container-fluid">
+          <div class="d-flex">
+            <% if(searchartist.length> 0){ %>
+              <h1 class="category searchbg py-3 px-3">ARTISTS
+                <span class="thinword">(<%= searchartist.length %>)</span>
+              </h1>
+              <% } %>
+          </div>
+          <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
+            <% searchartist.slice(0,6).forEach(function(searchartist){ %>
+              <div class="col">
+                <div class="card shadows shadow-lg">
+                  <div class="card-body">
+                    <a class="text-decoration-none" href="/artist/<%= searchartist._id %>">
+                      <img class="artist--img" src="<%= searchartist.image %>">
+                      <p class="artist--name text-white">
+                        <%= searchartist.name %>
+                      </p>
+                      <p class="artist--artist d-inline">
+                        Artist
+                      </p>
+                    </a>
+                  </div>
+                </div>
+              </div>
               <% }) %>
-            </tbody>
+          </div>
+        </div>
+      </div>
+      <div class="album mt-2">
+        <div class="container-fluid">
+          <div class="d-flex">
+            <% if(searchalbum.length> 0){ %>
+              <h1 class="category searchbg py-3 px-3">ALBUMS
+                <span class="thinword">(<%= searchalbum.length %>)</span>
+              </h1>
+              <% } %>
+          </div>
+          <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
+            <% searchalbum.slice(0,6).forEach(function(searchalbum){ %>
+              <div class="col">
+                <div class="card shadows shadow-lg">
+                  <div class="card-body">
+                    <a class="text-decoration-none" href="/album/<%= searchalbum._id %>">
+                      <img class="album--img" src="<%= searchalbum.image %>">
+                      <p class="album--name text-white">
+                        <%= searchalbum.name %>
+                      </p>
+                      <a class="album--album d-inline" href="/artist/<%= searchalbum.artist.id %>">
+                        <%= searchalbum.artist.name %>
+                      </a>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <% }) %>
+          </div>
+        </div>
+      </div>
+      <div class="album mt-2">
+        <div class="container-fluid">
+          <div class="d-flex">
+            <% if(searchsong.length > 0){ %>
+              <h1 class="category searchbg py-3 px-3">SONGS
+                <span class="thinword">(<%= searchsong.length %>)</span>
+              </h1>
+              <% } %>
+          </div>
+          <table class="table searchbg text-white text-center mb-0">
+            <% if(searchsong.length > 0){ %>
+              <thead>
+                <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Album</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <% } %>
+                <tbody>
+                  <% searchsong.slice(0,8).forEach(function(searchsong){ %>
+                    <tr class="shadows">
+                      <% count++ %>
+                        <td>
+                          <div class="d-flex">
+                            <img class="songimg-admin" src="<%= searchsong.image %>">
+                            <a class="pt-4 mx-4 text-white text-decoration-none" href="/song/<%= searchsong._id %>">
+                              <%= searchsong.name %>
+                            </a>
+                          </div>
+                        </td>
+                        <td>
+                          <div class="pt-4">
+                            <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                              <%= searchsong.album.name %>
+                            </a>
+                          </div>
+                        </td>
+                        <td>
+                          <div class="pt-4">
+                            <span >
+                              6.00
+                            </span>
+                          </div>
+                        </td>
+                    </tr>
+                    <% }) %>
+                    <% searchsong.slice(8,searchsong.length).forEach(function(searchsong){ %>
+                      <tr class="shadows morerow hidden">
+                        <% count++ %>
+                          <td>
+                            <div class="d-flex">
+                              <img class="songimg-admin" src="<%= searchsong.image %>">
+                              <a class="pt-4 mx-4 text-white text-decoration-none" href="/song/<%= searchsong._id %>">
+                                <%= searchsong.name %>
+                              </a>
+                            </div>
+                          </td>
+                          <td>
+                            <div class="pt-4">
+                              <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                                <%= searchsong.album.name %>
+                              </a>
+                            </div>
+                          </td>
+                          <td>
+                            <div class="pt-4">
+                              <span >
+                                6.00
+                              </span>
+                            </div>
+                          </td>
+                      </tr>
+                      <% }) %>
+                </tbody>
           </table>
+          <% if(searchsong.length >= 10){ %>
+            <button onclick="showmore()" class="d-flex shadows mb-0 p-0 fullrow">
+                <span class="category showmore py-3 px-3 text-center">
+                  Show more...
+                </span>
+            </button>
+          <% } %>
+        </div>
+      </div>
+      <% if(searchsong.length===0 && searchartist.length===0 && searchalbum.length===0){ %>
+        <div class="squarebox text-center">
+            <div class="t text-white">
+              <img class="py-2" src="/image/icons/scope.png" width="30px">
+              <h2>0 result for " <%= keyword %> "</h2>
+            </div>
+        </div>
+        <% } %>
     </div>
-</div>
+    </div>
 
-<%- include("partials/footer.ejs") %>
+    <%- include("partials/footer.ejs") %>
