--- a/views/song/song-id.ejs
+++ b/views/song/song-id.ejs
@@ -8,10 +8,16 @@
                     <p class="songkit--up__name text-white mb-0"><%= songinfo.name %></p>
                     <a class="songkit--up__artist" href="/artist/<%= songinfo.artist.id %>"><%= songinfo.artist.name %></a>
                 </div>
-                <div class="songkit--down mt-3">
-                    <a class="mt-3 d-flex" href="#">
+                <div class="songkit--down mt-3 d-flex">
+                    <a href="#">
                         <img class="playbtn" src="/image/icons/play.png">
+                    </a>
+                    <a href="#" onclick="favbutton()" class="mx-3"> 
                         <img class="favbtn" src="/image/icons/fav.png">
+                        <!-- <i class="fa-regular fa-star"></i> -->
+                        <img class="favbtn-click hidden" src="/image/icons/fav-click.png">
+                    </a>
+                    <a href="#">
                         <img class="addbtn" src="/image/icons/add.png">
                     </a>
                 </div>
@@ -43,7 +49,7 @@
                   <tbody>
               <% othersong.forEach(function(othersong){ %>
                     <tr>
-                      <th class="card">
+                      <th class="card shadows">
                             <div class="d-flex">
                                 <a class=" text-decoration-none" href="/song/<%= othersong._id %>">
                                     <img class="songimg" src="<%= othersong.image %>">
@@ -67,7 +73,7 @@
                     <tbody>
                 <% otherartist.forEach(function(otherartist){ %>
                       <tr>
-                        <th  class="card">
+                        <th  class="card shadows">
                             <div class="d-flex">
                                 <a class=" text-decoration-none" href="/artist/<%= otherartist._id %>">
                                     <img class="artistimg" src="<%= otherartist.image %>">
