--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,3 +1,55 @@
 <%- include("../partials/header.ejs") %>
+    <div class="col pt-4">
+        <div class="container">
+            <div class="row gutters">
+                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+                    <div class="card profilebg text-white">
+                        <div class="card-body">
+                            <div class="account-settings">
+                                <div class="user-profile">
+                                    <div class="user-avatar">
+                                        <img src="<%= user.image %>">
+                                    </div>
+                                    <h5 class="user-name"><%- user.firstname + ' ' + user.lastname %></h5>
+                                    <p class="username text-white m-0">
+                                        <i class="fa-solid fa-user"></i>
+                                        <%= user.username %>
+                                    </p>
+                                    <p class="username text-white">
+                                        <i class="fa-solid fa-envelope"></i>
+                                        <a class="email" href="mailto: <%= user.email %>">
+                                            <%= user.email %>
+                                        </a>
+                                    </p>
+                                </div>
+                               
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+                    <div class="card profilebg text-white">
+                        <div class="card-body">
+                            <div class="row gutters">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                    <h3 class="mb-2 text-white">Favourite Songs</h3>
+                                </div>
+                            </div>
+                            <table class="table text-white">
+                                <thead>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row"></th>
+                                    <td></td>
+                                    <td></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<%- include("../partials/footer.ejs") %>
+        <%- include("../partials/footer.ejs") %>
