--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="text-white">
             <div class="register--form">
-                <a class="register--form__back" href="/">
+                <a class="register--form__back" href="javascript:history.back()">
                     <img src="/image/icons/back.png" width="30vh">
                 </a>
                 <div class="register--form__logo">
