--- a/views/album/remove.ejs
+++ b/views/album/remove.ejs
@@ -17,19 +17,30 @@
                 <a class="nav-link" href="/user/remove">User</a>
             </li>
         </ul>
-        <table class="table text-white pt-4 text-center">
+        <table class="table text-white pt-4 text-center sortable">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Name</th>
-              <th>Artist</th>
-              <th>Number of songs</th>
+              <th class="shadows">#</th>
+              <th class="shadows">
+                Name
+                <i class="fa-solid fa-sort"></i>
+              </th>
+              <th class="shadows">
+                Artist
+                <i class="fa-solid fa-sort"></i>
+              </th>
+              <th class="shadows">
+                Number of songs
+                <i class="fa-solid fa-sort"></i>
+              </th>
             </tr>
           </thead>
           <tbody>
             <% allAlbum.forEach(function(allAlbum){ %>
               <tr class="shadows">
-                <th class="pt-4"><%= count %></th>
+                <td class="pt-4">
+                  <%= count %>
+                </td>
                 <% count++ %>
                 <td>
                   <div class="d-flex">
