--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/akjpro/form-anticlear/base.js"></script>
     <script src="https://kit.fontawesome.com/d47180477f.js" crossorigin="anonymous"></script>
+    <script src="https://drvic10k.github.io/bootstrap-sortable/Scripts/bootstrap-sortable.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
             <% if(!currentUser || currentUser && !currentUser.isAdmin){ %>
                 <form action="/search" method="post" class="form-anticlear">
                     <input class="form-control me-2 search navbar--search__size"
-                        type="search" name="keyword" placeholder="Artists, Song" required>
+                        type="search" name="keyword" placeholder="Search for Songs, Artists and Albums" required>
                 </form>
                 <% } %>
                     <% if(!currentUser) { %>
