--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,8 +1,23 @@
 <%- include("partials/header.ejs") %>
   <% let count = 1 %>
     <div class="col mb-5">
+      <div class="x mt-3">
+        <ul class="nav nav-pills justify-content-center pt-4">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
       <div class="album mt-2">
-        <div class="container-fluid">
+        <div class="container-fluid pt-4">
           <div class="d-flex">
             <% if(searchartist.length> 0){ %>
               <h1 class="category searchbg py-3 px-3">ARTISTS
@@ -32,7 +47,7 @@
         </div>
       </div>
       <div class="album mt-2">
-        <div class="container-fluid">
+        <div class="container-fluid pt-4">
           <div class="d-flex">
             <% if(searchalbum.length> 0){ %>
               <h1 class="category searchbg py-3 px-3">ALBUMS
@@ -62,7 +77,7 @@
         </div>
       </div>
       <div class="album mt-2">
-        <div class="container-fluid">
+        <div class="container-fluid py-4">
           <div class="d-flex">
             <% if(searchsong.length > 0){ %>
               <h1 class="category searchbg py-3 px-3">SONGS
@@ -70,13 +85,26 @@
               </h1>
               <% } %>
           </div>
-          <table class="table searchbg text-white text-center mb-0">
+          <table class="table searchbg text-white text-center mb-0 sortable">
             <% if(searchsong.length > 0){ %>
               <thead>
                 <tr>
-                  <th scope="col">Name</th>
-                  <th scope="col">Album</th>
-                  <th scope="col"></th>
+                  <th scope="col" class="shadows">
+                    Title
+                    <i class="fa-solid fa-sort"></i>
+                  </th>
+                  <th scope="col" class="shadows">
+                    Artist
+                    <i class="fa-solid fa-sort"></i>
+                  </th>
+                  <th scope="col" class="shadows">
+                    Album
+                    <i class="fa-solid fa-sort"></i>
+                  </th>
+                  <th scope="col" class="shadows">
+                    <i class="fa-solid fa-clock"></i>
+                    <i class="fa-solid fa-sort"></i>
+                  </th>
                 </tr>
               </thead>
               <% } %>
@@ -89,6 +117,13 @@
                             <img class="songimg-admin" src="<%= searchsong.image %>">
                             <a class="pt-4 mx-4 text-white text-decoration-none" href="/song/<%= searchsong._id %>">
                               <%= searchsong.name %>
+                            </a>
+                          </div>
+                        </td>
+                        <td>
+                          <div class="pt-4">
+                            <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                              <%= searchsong.artist.name %>
                             </a>
                           </div>
                         </td>
@@ -116,6 +151,13 @@
                               <img class="songimg-admin" src="<%= searchsong.image %>">
                               <a class="pt-4 mx-4 text-white text-decoration-none" href="/song/<%= searchsong._id %>">
                                 <%= searchsong.name %>
+                              </a>
+                            </div>
+                          </td>
+                          <td>
+                            <div class="pt-4">
+                              <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                                <%= searchsong.artist.name %>
                               </a>
                             </div>
                           </td>
@@ -154,6 +196,7 @@
             </div>
         </div>
         <% } %>
+        
     </div>
     </div>
 
